<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:background="@color/lightGrey">

    <!-- Will hold the text of ingredients -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/white">

        <!-- Ingredient -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <!-- Recipe Name -->
            <TextView
                android:id="@+id/tv_recipe_item_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/recipe_item"
                android:layout_weight=".9"
                android:textSize="16sp"
                />
            <!-- Recipe Quantity -->
            <TextView
                android:id="@+id/tv_recipe_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/recipe_quantity"
                android:layout_weight=".10"
                android:textSize="16sp"
                android:gravity="right"
                />
            <!-- Recipe Unit -->
            <TextView
                android:id="@+id/tv_recipe_unit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/recipe_unit"
                android:layout_weight=".15"
                android:textSize="16sp"
                android:gravity="right"
                />

        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="2dp"
            android:background="@color/lightGrey"></View>

    </LinearLayout>

</FrameLayout>